@@ -1,6 +1,7 @@
 #FROM maven:3-jdk-8-slim
-FROM maven:3-jdk-9-slim
+#FROM maven:3-jdk-9-slim
 #FROM maven:3-jdk-10-slim
+FROM maven:3-jdk-11-slim
 #FROM frekele/maven
 
 RUN mkdir /repository
@@ -48,7 +49,7 @@ RUN mvn -Dmaven.repo.local=/repository test
 VOLUME /app/peer-eon-app/src/main/webapp/WEB-INF
 EXPOSE 9443
 
-ENV MAVEN_OPTS "-XX:+HeapDumpOnOutOfMemoryError -verbose:gc -XX:+PrintGCDetails -XX:+PrintFlagsFinal -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Xmx350m"
+ENV MAVEN_OPTS "-XX:+HeapDumpOnOutOfMemoryError -verbose:gc -XX:+PrintGCDetails -XX:+PrintFlagsFinal -Xmx350m"
 ENTRYPOINT mvn -o -Dmaven.repo.local=/repository jetty:run -DSECRET_SEED=$SECRET_SEED -Dblockchain.full=$FULL_BLOCKCHAIN -Dblockchain.clean=$CLEAN_BLOCKCHAIN -Dhost.inner=$INNER_PEER
 
 # For debug
